--- a/step12/index.html
+++ b/step12/index.html
@@ -29,7 +29,7 @@
   </script>
 </head>
 <body>
-  <canvas id="gameCanvas"></canvas>
+  <canvas id="game-canvas"></canvas>
   <script type="module" src="./main.js"></script>
 </body>
 </html> 
